--- a/.npmignore
+++ b/.npmignore
@@ -1,9 +1,13 @@
 # Project Config
 /.idea
+tsconfig.json
 .prettierrc.json
 .prettierignore.json
 
 # Typescript Files
 /src
 
-#
+# Lock File
+package-lock.json
+yarn.lock
+pnpm.lock
