--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vclight",
-  "version": "1.0.1",
-  "description": "A framework for vercel serverless app",
+  "version": "1.1.0",
+  "description": "A plugin-oriented framework for vercel serverless app",
   "author": "Bluemangoo",
   "license": "MIT",
   "main": "./dist/index.js",
@@ -17,6 +17,7 @@
     "build": "tsc"
   },
   "devDependencies": {
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "@vercel/node": "^2.9.13"
   }
 }
