--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vclight",
-  "version": "1.3.0",
-  "description": "A plugin-oriented framework for vercel serverless app",
+  "version": "2.0.0",
+  "description": "A framework for vercel serverless app",
   "author": "Bluemangoo",
   "license": "MIT",
   "main": "./dist/index.js",
