chore: migrate to pnpm monorepo
- packages/vclight: from https://github.com/Bluemangoo/VCLight/commit/fef5df3c4dd19fe3c507ff9171f37c33bfa4ac60
- packages/vclight-router: from https://github.com/Bluemangoo/VCLight-Router/commit/4de17da2b54ffe5db98409cea5de65f0258a39a4
- packages/vclight-cli: from https://github.com/Bluemangoo/VCLight-Cli/commit/04e26f05369c5942ccd20d946b090e34f13b9d73

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
 # Project Configs
-/.idea
+.idea/
+.vscode/
 
 # Node Modules
-/node_modules
+node_modules/
 
 # Build
-/dist
+packages/vclight/dist/
+packages/vclight-router/dist/
+packages/vclight-cli/lib
 
-# Lock File
+# Lock File NOT from PNPM
 package-lock.json
 yarn.lock
