feat(vclight-cli): support netlify
template sync with https://github.com/Bluemangoo/VCLight-Example/commit/3fae795b2c9348787291e1ac697808a26717e44f

--- a/packages/vclight-cli/package.json
+++ b/packages/vclight-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vclight-cli",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "description": "",
   "main": "index.js",
   "bin": {
@@ -11,7 +11,9 @@
     "bin": "./bin"
   },
   "keywords": [
-    "vercel"
+    "vercel",
+    "netlify",
+    "http-server"
   ],
   "author": "Bluemangoo",
   "license": "MIT",
