--- a/packages/router/package.json
+++ b/packages/router/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vclight-router",
+  "name": "@vclight/router",
   "version": "1.3.0",
   "description": "Router for VCLight",
   "author": "Bluemangoo",
@@ -7,7 +7,7 @@
   "main": "./dist/index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bluemangoo/VCLight-Router.git"
+    "url": "git+https://github.com/bluemangoo/VCLight.git"
   },
   "keywords": [
     "typescript",
