--- a/packages/vclight-cli/package.json
+++ b/packages/vclight-cli/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "vclight-cli",
-  "version": "1.0.16",
+  "name": "@vclight/cli",
+  "version": "1.0.17",
   "description": "",
   "main": "index.js",
   "bin": {
     "vclight": "bin/vclight.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bluemangoo/VCLight.git"
   },
   "directories": {
     "lib": "./lib",
