--- a/packages/vclight/package.json
+++ b/packages/vclight/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@netlify/functions": "^2.7.0",
+    "@netlify/serverless-functions-api": "^1.22.0",
     "@types/content-type": "^1.1.8",
     "@types/cookie": "^0.6.0",
     "@types/end-of-stream": "^1.4.4",
